--- a/server/locales/zh.properties
+++ b/server/locales/zh.properties
@@ -1,5 +1,6 @@
-Login = '登录'
-Email = '账户邮箱'
+'Log In' = '登录'
+'Log In please' = '欢迎登录'
+'UserName or Email' = '用户名或者邮箱'
 Password = '密码'
 Captcha = '验证码'
 'username or password wrong, please try again' = '用户名或密码错误'
@@ -11,3 +12,4 @@ Reload = '刷新'
 
 INTERNAL_SERVER_ERROR_TIP = '对不起，服务器开小差了'
 'Too many failed login attempts, please wait!' = '登录失败次数过多，请稍后重试'
+'Log In with GitHub' = '通过 GitHub 登录'
